--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -121,7 +123,7 @@
                         alt="Фото" 
                         width="270"
                     >
-                    <h3 class="section-subtitle">Игорь Демьяненко</h3>
+                    <h3 class="section-subtitle team">Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
@@ -130,7 +132,7 @@
                         alt="Фото" 
                         width="270"
                     >
-                    <h3 class="section-subtitle">Ольга Репина</h3>
+                    <h3 class="section-subtitle team">Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
@@ -139,7 +141,7 @@
                         alt="Фото" 
                         width="270"
                     >
-                    <h3 class="section-subtitle">Николай Тарасов</h3>
+                    <h3 class="section-subtitle team">Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
@@ -148,7 +150,7 @@
                         alt="Фото" 
                         width="270"
                     >
-                    <h3 class="section-subtitle">Михаил Ермаков</h3>
+                    <h3 class="section-subtitle team">Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
