--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -53,53 +55,58 @@
 
         <!-- Portfolio items -->
 
+    <section>
+        <h1>Портфорлио</h1>
+
         <ul>
             <li>
                 <img src="./images/portfolio1.jpg" alt="Ноутбук" width="370">
-                <h3 class="section-subtitle">Технокряк</h3>
+                <h2 class="section-subtitle works">Технокряк</h3>
                 <p>Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/portfolio2.jpg" alt="Два баскетболиста" width="370">
-                <h3 class="section-subtitle">Постер New Orlean vs Golden Star</h3>
+                <h2 class="section-subtitle works">Постер New Orlean vs Golden Star</h3>
                 <p>Дизайн</p>
             </li>
             <li>
                 <img src="./images/portfolio3.jpg" alt="Постер" width="370">
-                <h3 class="section-subtitle">Ресторан Seafood</h3>
+                <h2 class="section-subtitle works">Ресторан Seafood</h3>
                 <p>Приложение</p>
             </li>
             <li>
                 <img src="./images/portfolio4.jpg" alt="Наушники" width="370">
-                <h3 class="section-subtitle">Проект Prime</h3>
+                <h2 class="section-subtitle works">Проект Prime</h3>
                 <p>Маркетинг</p>
             </li>
             <li>
                 <img src="./images/portfolio5.jpg" alt="Две коробки" width="370">
-                <h3 class="section-subtitle">Проект Boxes</h3>
+                <h2 class="section-subtitle works">Проект Boxes</h3>
                 <p>Приложение</p>
             </li>
             <li>
                 <img src="./images/portfolio6.jpg" alt="Монитор" width="370">
-                <h3 class="section-subtitle">Inspiration has no Borders</h3>
+                <h2 class="section-subtitle works">Inspiration has no Borders</h3>
                 <p>Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/portfolio7.jpg" alt="Книга" width="370">
-                <h3 class="section-subtitle">Издание Limited Edition</h3>
+                <h2 class="section-subtitle works">Издание Limited Edition</h3>
                 <p>Дизайн</p>
             </li>
             <li>
                 <img src="./images/portfolio8.jpg" alt="Этикетка" width="370">
-                <h3 class="section-subtitle">Проект LAB</h3>
+                <h2 class="section-subtitle works">Проект LAB</h3>
                 <p>Маркетинг</p>
             </li>
             <li>
                 <img src="./images/portfolio9.jpg" alt="Ноутбук" width="370">
-                <h3 class="section-subtitle">Growing Business</h3>
+                <h2 class="section-subtitle works">Growing Business</h3>
                 <p>Приложение</p>
             </li>
         </ul>
+
+    </section>
     </main>
 
     <!-- Footer -->
