--- a/portfolio.html
+++ b/portfolio.html
@@ -1,135 +1,127 @@
 <!DOCTYPE html>
 <html lang="ru">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="./styles/style.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
-</head>
+	<body>
+		<!-- Меню навигации -->
 
-<body>
+		<header>
+			<nav class="nav">
+				<a href="./" class="logo">
+					<span class="logo accent">Web</span>
+					Studio
+				</a>
+				<ul class="menu">
+					<li class="link">
+						<a href="./index.html" class="nav link">Студия</a>
+					</li>
+					<li class="link">
+						<a href="./portfolio.html" class="nav link">Портфолио</a>
+					</li>
+					<li class="link"><a href="" class="nav link">Контакты</a></li>
+				</ul>
+			</nav>
+			<ul class="contacts">
+				<li class="email">
+					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+				</li>
 
-    <!-- Меню навигации -->
+				<li class="phone">
+					<a href="tel:+380961111111">+38 096 111 11 11</a>
+				</li>
+			</ul>
+		</header>
+		<main>
+			<!-- Filer -->
 
-    <header>
-        <nav class="nav">
-            <a href="./" class="logo">
-                <span class="logo accent">Web</span>Studio</a>
-            <ul class="menu">
-                <li class="link">
-                    <a href="./index.html" class="nav link">Студия</a>
-                </li>
-                <li class="link">
-                    <a href="./portfolio.html" class="nav link">Портфолио</a>
-                </li>
-                <li class="link"><a href="" class="nav link">Контакты</a>
-                </li>
-            </ul>
-        </nav>
-        <ul class="contacts">
-            <li class="email">
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-    
-            <li class="phone">
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-    
-        </ul>
-    </header>
-    <main>
+			<ul>
+				<li><button type="button" class="button filter">Все</button></li>
+				<li><button type="button" class="button filter">Веб-сайты</button></li>
+				<li><button type="button" class="button filter">Приложения</button></li>
+				<li><button type="button" class="button filter">Дизайн</button></li>
+				<li><button type="button" class="button filter">Маркетинг</button></li>
+			</ul>
 
-<!-- Filer -->
+			<!-- Portfolio items -->
 
-        <ul>
-            <li><button type="button" class="button filter">Все</button></li>
-            <li><button type="button" class="button filter">Веб-сайты</button></li>
-            <li><button type="button" class="button filter">Приложения</button></li>
-            <li><button type="button" class="button filter">Дизайн</button></li>
-            <li><button type="button" class="button filter">Маркетинг</button></li>
-        </ul>
+			<section>
+				<h1>Портфорлио</h1>
 
-        <!-- Portfolio items -->
+				<ul>
+					<li>
+						<img src="./images/portfolio1.jpg" alt="Ноутбук" width="370" />
+						<h2 class="section-subtitle works">Технокряк</h2>
+						<p>Веб-сайт</p>
+					</li>
+					<li>
+						<img src="./images/portfolio2.jpg" alt="Два баскетболиста" width="370" />
+						<h2 class="section-subtitle works">Постер New Orlean vs Golden Star</h2>
+						<p>Дизайн</p>
+					</li>
+					<li>
+						<img src="./images/portfolio3.jpg" alt="Постер" width="370" />
+						<h2 class="section-subtitle works">Ресторан Seafood</h2>
+						<p>Приложение</p>
+					</li>
+					<li>
+						<img src="./images/portfolio4.jpg" alt="Наушники" width="370" />
+						<h2 class="section-subtitle works">Проект Prime</h2>
+						<p>Маркетинг</p>
+					</li>
+					<li>
+						<img src="./images/portfolio5.jpg" alt="Две коробки" width="370" />
+						<h2 class="section-subtitle works">Проект Boxes</h2>
+						<p>Приложение</p>
+					</li>
+					<li>
+						<img src="./images/portfolio6.jpg" alt="Монитор" width="370" />
+						<h2 class="section-subtitle works">Inspiration has no Borders</h2>
+						<p>Веб-сайт</p>
+					</li>
+					<li>
+						<img src="./images/portfolio7.jpg" alt="Книга" width="370" />
+						<h2 class="section-subtitle works">Издание Limited Edition</h2>
+						<p>Дизайн</p>
+					</li>
+					<li>
+						<img src="./images/portfolio8.jpg" alt="Этикетка" width="370" />
+						<h2 class="section-subtitle works">Проект LAB</h2>
+						<p>Маркетинг</p>
+					</li>
+					<li>
+						<img src="./images/portfolio9.jpg" alt="Ноутбук" width="370" />
+						<h2 class="section-subtitle works">Growing Business</h2>
+						<p>Приложение</p>
+					</li>
+				</ul>
+			</section>
+		</main>
 
-    <section>
-        <h1>Портфорлио</h1>
+		<!-- Footer -->
 
-        <ul>
-            <li>
-                <img src="./images/portfolio1.jpg" alt="Ноутбук" width="370">
-                <h2 class="section-subtitle works">Технокряк</h3>
-                <p>Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./images/portfolio2.jpg" alt="Два баскетболиста" width="370">
-                <h2 class="section-subtitle works">Постер New Orlean vs Golden Star</h3>
-                <p>Дизайн</p>
-            </li>
-            <li>
-                <img src="./images/portfolio3.jpg" alt="Постер" width="370">
-                <h2 class="section-subtitle works">Ресторан Seafood</h3>
-                <p>Приложение</p>
-            </li>
-            <li>
-                <img src="./images/portfolio4.jpg" alt="Наушники" width="370">
-                <h2 class="section-subtitle works">Проект Prime</h3>
-                <p>Маркетинг</p>
-            </li>
-            <li>
-                <img src="./images/portfolio5.jpg" alt="Две коробки" width="370">
-                <h2 class="section-subtitle works">Проект Boxes</h3>
-                <p>Приложение</p>
-            </li>
-            <li>
-                <img src="./images/portfolio6.jpg" alt="Монитор" width="370">
-                <h2 class="section-subtitle works">Inspiration has no Borders</h3>
-                <p>Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./images/portfolio7.jpg" alt="Книга" width="370">
-                <h2 class="section-subtitle works">Издание Limited Edition</h3>
-                <p>Дизайн</p>
-            </li>
-            <li>
-                <img src="./images/portfolio8.jpg" alt="Этикетка" width="370">
-                <h2 class="section-subtitle works">Проект LAB</h3>
-                <p>Маркетинг</p>
-            </li>
-            <li>
-                <img src="./images/portfolio9.jpg" alt="Ноутбук" width="370">
-                <h2 class="section-subtitle works">Growing Business</h3>
-                <p>Приложение</p>
-            </li>
-        </ul>
-
-    </section>
-    </main>
-
-    <!-- Footer -->
-
-    <footer class="footer">
-        <a href="./" class="logo-footer">
-            <span class="logo accent">Web</span>Studio</a>
-        <div>
-            <address class="address">
-                г. Киев, пр-т Леси Украинки, 26
-            </address>
-            <address class="footer-contacts">
-                <a href="mailto:info@example.com">
-                    info@example.com
-                </a>
-                <br>
-                <a href="tel:+380991111111">
-                    +38 099 111 11 11
-                </a>
-            </address>
-        </div>
-    </footer>
-
-</body>
-
+		<footer class="footer">
+			<a href="./" class="logo-footer">
+				<span class="logo accent">Web</span>
+				Studio
+			</a>
+			<div>
+				<address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+				<address class="footer-contacts">
+					<a href="mailto:info@example.com">info@example.com</a>
+					<br />
+					<a href="tel:+380991111111">+38 099 111 11 11</a>
+				</address>
+			</div>
+		</footer>
+	</body>
 </html>
