--- a/index.html
+++ b/index.html
@@ -1,183 +1,143 @@
 <!DOCTYPE html>
 <html lang="ru">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>WebStudio</title>
+		<link rel="stylesheet" href="./css/styles.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebStudio</title>
-    <link rel="stylesheet" href="./styles/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
-</head>
+	<body>
+		<!--Nav menu -->
 
-<body>
+		<header>
+			<nav class="nav">
+				<a href="./" class="logo link">
+					<span class="logo accent">Web</span>
+					Studio
+				</a>
+				<ul class="menu">
+					<li class="list">
+						<a class="nav link current" href="./index.html">Студия</a>
+					</li>
+					<li class="list">
+						<a class="nav link" href="./portfolio.html">Портфолио</a>
+					</li>
+					<li class="list">
+						<a class="nav link" href="">Контакты</a>
+					</li>
+				</ul>
+			</nav>
+			<ul class="contacts">
+				<li class="list">
+					<a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+				</li>
 
-    <!--Nav menu -->
+				<li class="list">
+					<a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a>
+				</li>
+			</ul>
+		</header>
+		<main>
+			<!-- Hero -->
 
-    <header>
-        <nav class="nav">
-            <a href="./" class="logo">
-                <span class="logo accent">Web</span>Studio</a>
-            <ul class="menu">
-                <li class="link">
-                    <a href="./index.html" 
-                    class="nav link">Студия</a>
-                </li>
-                <li class="link">
-                    <a href="./portfolio.html" 
-                    class="nav link">Портфолио</a>
-                </li>
-                <li class="link"><a href="" 
-                    class="nav link">Контакты</a>
-                </li>
-            </ul>
-        </nav>
-            <ul class="contacts">
-                <li class="email">
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
+			<section>
+				<h1 class="hero-title">
+					Эффективные решения
+					<br />
+					для вашего бизнеса
+				</h1>
+				<button class="button primary hero-btn" type="button">Заказать услугу</button>
+			</section>
 
-                <li class="phone">
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
+			<!-- Testimonials -->
+			<section class="section">
+				<h2 class="section-title">Преимущества</h2>
+				<ul>
+					<li class="list">
+						<h3 class="section-subtitle testimonials">Внимание к деталям</h3>
+						<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+					</li>
+					<li class="list">
+						<h3 class="section-subtitle testimonials">Пунктуальность</h3>
+						<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+					</li>
+					<li class="list">
+						<h3 class="section-subtitle testimonials">Планирование</h3>
+						<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+					</li>
+					<li class="list">
+						<h3 class="section-subtitle testimonials">Современные технологии</h3>
+						<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+					</li>
+				</ul>
+			</section>
 
-            </ul>
-    </header>
-    <main>
+			<!-- About -->
+			<section class="section">
+				<h2 class="section-title">Чем мы занимаемся</h2>
+				<ul>
+					<li class="list">
+						<img src="./images/box_1.jpg" alt="Изображение" width="370" />
+					</li>
+					<li class="list">
+						<img src="./images/box_2.jpg" alt="Изображение" width="370" />
+					</li>
+					<li class="list">
+						<img src="./images/box_3.jpg" alt="Изображение" width="370" />
+					</li>
+				</ul>
+			</section>
 
-        <!-- Hero -->
+			<!-- Our team -->
 
-        <section>
-            <h1 class="hero-title">
-                Эффективные решения<br>для вашего бизнеса
-            </h1>
-            <button type="button" class="button primary">
-                Заказать услугу
-            </button>
-        </section>
+			<section class="section sec-bg">
+				<h2 class="section-title">Наша команда</h2>
+				<ul>
+					<li class="list team-card">
+						<img src="./images/photo1.jpg" alt="Фото" width="270" />
+						<h3 class="section-subtitle team">Игорь Демьяненко</h3>
+						<p>Product Designer</p>
+					</li>
+					<li class="list team-card">
+						<img src="./images/photo2.jpg" alt="Фото" width="270" />
+						<h3 class="section-subtitle team">Ольга Репина</h3>
+						<p>Frontend Developer</p>
+					</li>
+					<li class="list team-card">
+						<img src="./images/photo3.jpg" alt="Фото" width="270" />
+						<h3 class="section-subtitle team">Николай Тарасов</h3>
+						<p>Marketing</p>
+					</li>
+					<li class="list team-card">
+						<img src="./images/photo4.jpg" alt="Фото" width="270" />
+						<h3 class="section-subtitle team">Михаил Ермаков</h3>
+						<p>UI Designer</p>
+					</li>
+				</ul>
+			</section>
+		</main>
 
-        <!-- Testimonials -->
-        <section class="section">
-            <h2 class="section-title">Преимущества</h2>
-            <ul>
-                <li>
-                    <h3 class="section-subtitle testimonials
-                    ">Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h3 class="section-subtitle testimonials
-                    ">Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h3 class="section-subtitle testimonials
-                    ">Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h3 class="section-subtitle testimonials
-                    ">Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-        </section>
+		<!-- Footer -->
 
-        <!-- About -->
-        <section class="section">
-            <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul>
-                <li>
-                    <img 
-                        src="./images/box_1.jpg" 
-                        alt="Изображение" 
-                        width="370"
-                    >
-                </li>
-                <li>
-                    <img 
-                        src="./images/box_2.jpg" 
-                        alt="Изображение" 
-                        width="370"
-                    >
-                </li>
-                <li>
-                    <img 
-                        src="./images/box_3.jpg" 
-                        alt="Изображение" 
-                        width="370"
-                    >
-                </li>
-            </ul>
-        </section>
-
-        <!-- Our team -->
-
-        <section class="section">
-            <h2 class="section-title">Наша команда</h2>
-            <ul>
-                <li>
-                    <img 
-                        src="./images/photo1.jpg" 
-                        alt="Фото" 
-                        width="270"
-                    >
-                    <h3 class="section-subtitle team">Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img 
-                        src="./images/photo2.jpg" 
-                        alt="Фото" 
-                        width="270"
-                    >
-                    <h3 class="section-subtitle team">Ольга Репина</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img 
-                        src="./images/photo3.jpg" 
-                        alt="Фото" 
-                        width="270"
-                    >
-                    <h3 class="section-subtitle team">Николай Тарасов</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img 
-                        src="./images/photo4.jpg" 
-                        alt="Фото" 
-                        width="270"
-                    >
-                    <h3 class="section-subtitle team">Михаил Ермаков</h3>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
-        </section>
-    </main>
-
-    <!-- Footer -->
-
-    <footer class="footer">
-        <a href="./" class="logo-footer">
-            <span class="logo accent">Web</span>Studio</a>
-        <div>
-            <address class="address">
-                г. Киев, пр-т Леси Украинки, 26
-            </address>
-            <address class="footer-contacts">   
-                <a href="mailto:info@example.com">
-                    info@example.com
-                </a>
-                <br>
-                <a href="tel:+380991111111">
-                    +38 099 111 11 11
-                </a>
-            </address>
-        </div>
-    </footer>
-
-</body>
-
+		<footer class="footer">
+			<a class="logo-footer link" href="./">
+				<span class="logo accent">Web</span>
+				Studio
+			</a>
+			<div>
+				<address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+				<address>
+					<a class="footer-contacts link" href="mailto:info@example.com">info@example.com</a>
+					<br />
+					<a class="footer-contacts link" href="tel:+380991111111">+38 099 111 11 11</a>
+				</address>
+			</div>
+		</footer>
+	</body>
 </html>
