--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-		<link rel="stylesheet" href="./styles/style.css" />
+		<link rel="stylesheet" href="./css/styles.css" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
@@ -13,92 +13,103 @@
 	</head>
 
 	<body>
-		<!-- Меню навигации -->
+		<!--Nav menu -->
 
 		<header>
 			<nav class="nav">
-				<a href="./" class="logo">
+				<a href="./" class="logo link">
 					<span class="logo accent">Web</span>
 					Studio
 				</a>
 				<ul class="menu">
-					<li class="link">
-						<a href="./index.html" class="nav link">Студия</a>
+					<li class="list">
+						<a class="nav link" href="./index.html">Студия</a>
 					</li>
-					<li class="link">
-						<a href="./portfolio.html" class="nav link">Портфолио</a>
+					<li class="list">
+						<a class="nav link current" href="./portfolio.html">Портфолио</a>
 					</li>
-					<li class="link"><a href="" class="nav link">Контакты</a></li>
+					<li class="list">
+						<a class="nav link" href="">Контакты</a>
+					</li>
 				</ul>
 			</nav>
 			<ul class="contacts">
-				<li class="email">
-					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+				<li class="list">
+					<a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				</li>
 
-				<li class="phone">
-					<a href="tel:+380961111111">+38 096 111 11 11</a>
+				<li class="list">
+					<a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</header>
 		<main>
-			<!-- Filer -->
-
-			<ul>
-				<li><button type="button" class="button filter">Все</button></li>
-				<li><button type="button" class="button filter">Веб-сайты</button></li>
-				<li><button type="button" class="button filter">Приложения</button></li>
-				<li><button type="button" class="button filter">Дизайн</button></li>
-				<li><button type="button" class="button filter">Маркетинг</button></li>
-			</ul>
-
-			<!-- Portfolio items -->
-
 			<section>
 				<h1>Портфорлио</h1>
+				<!-- Filer -->
 
 				<ul>
-					<li>
+					<li class="list">
+						<button type="button" class="button filter">Все</button>
+					</li>
+					<li class="list">
+						<button type="button" class="button filter">Веб-сайты</button>
+					</li>
+					<li class="list">
+						<button type="button" class="button filter">Приложения</button>
+					</li>
+					<li class="list">
+						<button type="button" class="button filter">Дизайн</button>
+					</li>
+					<li class="list">
+						<button type="button" class="button filter">Маркетинг</button>
+					</li>
+				</ul>
+
+				<!-- Portfolio items -->
+
+				<ul>
+					<li class="list">
 						<img src="./images/portfolio1.jpg" alt="Ноутбук" width="370" />
 						<h2 class="section-subtitle works">Технокряк</h2>
 						<p>Веб-сайт</p>
 					</li>
-					<li>
+					<li class="list">
 						<img src="./images/portfolio2.jpg" alt="Два баскетболиста" width="370" />
 						<h2 class="section-subtitle works">Постер New Orlean vs Golden Star</h2>
 						<p>Дизайн</p>
 					</li>
-					<li>
+					<li class="list">
 						<img src="./images/portfolio3.jpg" alt="Постер" width="370" />
 						<h2 class="section-subtitle works">Ресторан Seafood</h2>
 						<p>Приложение</p>
 					</li>
-					<li>
+					<li class="list">
 						<img src="./images/portfolio4.jpg" alt="Наушники" width="370" />
 						<h2 class="section-subtitle works">Проект Prime</h2>
 						<p>Маркетинг</p>
 					</li>
-					<li>
+					<li class="list">
 						<img src="./images/portfolio5.jpg" alt="Две коробки" width="370" />
 						<h2 class="section-subtitle works">Проект Boxes</h2>
 						<p>Приложение</p>
 					</li>
-					<li>
+					<li class="list">
 						<img src="./images/portfolio6.jpg" alt="Монитор" width="370" />
 						<h2 class="section-subtitle works">Inspiration has no Borders</h2>
 						<p>Веб-сайт</p>
 					</li>
-					<li>
+					<li class="list">
 						<img src="./images/portfolio7.jpg" alt="Книга" width="370" />
 						<h2 class="section-subtitle works">Издание Limited Edition</h2>
 						<p>Дизайн</p>
 					</li>
-					<li>
+					<li class="list">
 						<img src="./images/portfolio8.jpg" alt="Этикетка" width="370" />
 						<h2 class="section-subtitle works">Проект LAB</h2>
 						<p>Маркетинг</p>
 					</li>
-					<li>
+					<li class="list">
 						<img src="./images/portfolio9.jpg" alt="Ноутбук" width="370" />
 						<h2 class="section-subtitle works">Growing Business</h2>
 						<p>Приложение</p>
@@ -110,16 +121,16 @@
 		<!-- Footer -->
 
 		<footer class="footer">
-			<a href="./" class="logo-footer">
+			<a class="logo-footer link" href="./">
 				<span class="logo accent">Web</span>
 				Studio
 			</a>
 			<div>
 				<address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-				<address class="footer-contacts">
-					<a href="mailto:info@example.com">info@example.com</a>
+				<address>
+					<a class="footer-contacts link" href="mailto:info@example.com">info@example.com</a>
 					<br />
-					<a href="tel:+380991111111">+38 099 111 11 11</a>
+					<a class="footer-contacts link" href="tel:+380991111111">+38 099 111 11 11</a>
 				</address>
 			</div>
 		</footer>
